2012-06-29  Stéphane Marguet (Stemp) <smarguet@gmail.com>
	* New upstream version
	* modernize the rather outdated release engineering infrastructure of
	  GEF and make it suitable for a CBI scenario.	
	  
2012-03-06  Stéphane Marguet (Stemp) <smarguet@gmail.com>
	* New mirror on S3 by cian1500ww
	
2012-02-27  Stéphane Marguet (Stemp) <smarguet@gmail.com>
	* New upstream version
	
2012-02-22  Stéphane Marguet (Stemp) <smarguet@gmail.com>
	* Change source url from 2.7.x to ${pkgver} (thanks to tasidus)
	* Add ChangeLog file