@@ -1,13 +1,13 @@
 # Contributor: Leo von Klenze <leo.vonklenze@tngtech.com> 
 pkgname="atlassian-plugin-sdk"
-pkgver=3.9.3
+pkgver=3.11
 pkgrel=2
 pkgdesc="Atlassian Plugin SDK for Developing Plugins for Atlassian Products"
 arch=('i686' 'x86_64')
 url="http://confluence.atlassian.com/x/rwWzDQ"
 license=('Apache License 2.0')
 source=("https://maven.atlassian.com/public/com/atlassian/amps/atlassian-plugin-sdk/$pkgver/atlassian-plugin-sdk-$pkgver.tar.gz")
-md5sums=('ce21f2a355f2b62e0d44c28e63747609')
+md5sums=('2899bd68f38f2522a73c6f82f821d541')
 depends=(sun-java6)
 
 build()
