@@ -3,13 +3,13 @@
 
 pkgname=cacheclean
 pkgver=2.1
-pkgrel=3
+pkgrel=4
 pkgdesc='Cleans up pacman packages.  Users selects how many old versions to keep.'
 arch=(any)
 license=(GPL)
 depends=('python')
 source=("https://github.com/graysky2/cacheclean/raw/master/$pkgname-source.tar.xz")
-sha256sums=('70acae2709bb5d07ad791333865f3f59efe9de0c4c1e0516aa7421dbfdac83ee')
+sha256sums=('229897bf588503c5a671072d5bdc805bb7be598d2276aadf6425b9bd31e2ed79')
 url=http://wiki.archlinux.org/index.php/CacheClean
 install=readme.install
 
