@@ -2,7 +2,7 @@
 # Maintainer: killhellokitty <killhellokitty.deviantart.com>
 
 pkgname=delorean
-pkgver=0.22
+pkgver=0.32
 pkgrel=2
 pkgdesc="A brushed-metal Theme for gtk3, gtk2 & metacity"
 arch=('any')
@@ -10,7 +10,7 @@ url="http://www.deviantart.com/download/316139639/delorean_theme__alpha__by_kill
 license=('GPL''Creative Commons Attribution-ShareAlike 3.0 Unported License.')
 depends=('gtk-engines' 'gnome-themes-standard>=3.4.1' 'gtk-engine-murrine>=0.98.2' 'gtk-engine-equinox>=1.50' 'gtk-engine-unico>=1.0.2')
 source=("${pkgname}-${pkgver}.zip::http://www.deviantart.com/download/316139639/delorean_theme__alpha__by_killhellokitty-d587ywn.zip")
-md5sums=('50f7884689f33c7e1faa10a50fcd497d')
+md5sums=('42ddece340e95557125862cb84b77dbe')
 
 
 package() {
