@@ -2,21 +2,21 @@
 # Contributor: Jonathan Wiersma <archaur at jonw dot org>
 
 pkgname=eclipse-dltk-rse
-pkgver=3.0.1
+pkgver=4.0
 pkgrel=1
-_pkgdate=201108261011
-pkgdesc="Mylyn support for remote systems in Eclipse (Stable Stream)"
+_pkgdate=201206120903
+pkgdesc="Mylyn support for remote systems in Eclipse"
 arch=('i686' 'x86_64')
 url="http://www.eclipse.org/dltk/"
 license=('EPL')
 depends=("eclipse-dltk-core" "eclipse-rse")
 _mirror="http://www.eclipse.org/downloads/download.php?r=1&file="
-source=("$_mirror/technology/dltk/downloads/drops/R${pkgver:0:3}/S-$pkgver-$_pkgdate/${pkgname#eclipse-}-S-$pkgver-$_pkgdate.zip")
-md5sums=('2e00a74f9c051e94b7b3d8dfcb06abb4')
+source=("$_mirror/technology/dltk/downloads/drops/R${pkgver:0:3}/R-$pkgver-$_pkgdate/${pkgname#eclipse-}-R-$pkgver-$_pkgdate.zip")
+md5sums=('9eaaa557d64d822b7d1b9bfcf41511c1')
 
 package() {
 	cd $srcdir
 	install -dm755 $pkgdir/usr/share/eclipse/dropins/${pkgname#eclipse-}/
-	find eclipse -type f -exec install -Dm644 {} \
+	find . -type f -exec install -Dm644 {} \
 		$pkgdir/usr/share/eclipse/dropins/${pkgname#eclipse-}/{} \;
 }
