@@ -1,21 +1,21 @@
 # Contributor: Jonathan Wiersma <archaur at jonw dot org>
 pkgname=eclipse-dltk-tcl
-pkgver=3.0.1
+pkgver=4.0
 pkgrel=1
-_pkgdate=201108261011
-pkgdesc="TCL IDE for Eclipse (stable stream)"
+_pkgdate=201206120903
+pkgdesc="TCL IDE for Eclipse"
 arch=('i686' 'x86_64')
 url="http://www.eclipse.org/dltk/"
 license=('EPL')
 depends=("eclipse-dltk-core>=$pkgver")
 optdepends=("eclipse-dltk-itcl" "eclipse-dltk-xotcl")
 _mirror="http://mirror.csclub.uwaterloo.ca/eclipse"
-source=("$_mirror/technology/dltk/downloads/drops/R${pkgver:0:3}/S-$pkgver-$_pkgdate/${pkgname#eclipse-}-S-$pkgver-$_pkgdate.zip")
-md5sums=('09eee33a2ef385fcd359d4caaf478020')
+source=("$_mirror/technology/dltk/downloads/drops/R${pkgver:0:3}/R-$pkgver-$_pkgdate/${pkgname#eclipse-}-R-$pkgver-$_pkgdate.zip")
+md5sums=('766f859880f90a68a8aee41be0ad04bd')
     
 package() {
 	cd $srcdir || return 1
 	install -dm755 $pkgdir/usr/share/eclipse/dropins/${pkgname#eclipse-}/ || return 1
-	find eclipse -type f -exec install -Dm644 {} \
+	find -type f -exec install -Dm644 {} \
 		$pkgdir/usr/share/eclipse/dropins/${pkgname#eclipse-}/{} \; || return 1
 }
