@@ -1,20 +1,20 @@
 # Contributor: Jonathan Wiersma <archaur at jonw dot org>
 pkgname=eclipse-dltk-xotcl
-pkgver=3.0.1
+pkgver=4.0
 pkgrel=1
-_pkgdate=201108261011
-pkgdesc="XOTcl IDE for Eclipse (stable stream)"
+_pkgdate=201206120903
+pkgdesc="XOTcl IDE for Eclipse"
 arch=('i686' 'x86_64')
 url="http://www.eclipse.org/dltk/"
 license=('EPL')
 depends=("eclipse-dltk-tcl>=$pkgver")
 _mirror="http://mirror.csclub.uwaterloo.ca/eclipse"
-source=("$_mirror/technology/dltk/downloads/drops/R${pkgver:0:3}/S-$pkgver-$_pkgdate/${pkgname#eclipse-}-S-$pkgver-$_pkgdate.zip")
-md5sums=('018d1cb674852746ca87cdf90db5c942')
+source=("$_mirror/technology/dltk/downloads/drops/R${pkgver:0:3}/R-$pkgver-$_pkgdate/${pkgname#eclipse-}-R-$pkgver-$_pkgdate.zip")
+md5sums=('a1ab2ab250de45d4824d96ed43ccd6b6')
 
 package() {
 	cd $srcdir || return 1
 	install -dm755 $pkgdir/usr/share/eclipse/dropins/${pkgname#eclipse-}/ || return 1
-	find eclipse -type f -exec install -Dm644 {} \
+	find -type f -exec install -Dm644 {} \
 		$pkgdir/usr/share/eclipse/dropins/${pkgname#eclipse-}/{} \; || return 1
 }
