@@ -6,14 +6,15 @@
 pkgname=eclipse-emf
 pkgver=2.8.0
 _reldate=201206080554
-pkgrel=1
+pkgrel=2
 pkgdesc="EMF and XSD frameworks for the Eclipse platform"
 arch=('any')
 url="http://www.eclipse.org/modeling/emf/"
 license=('EPL')
 depends=('eclipse')
 changelog=ChangeLog
-source=(http://mirror.netcologne.de/eclipse//modeling/emf/emf/downloads/drops/${pkgver}/R${_reldate}/emf-xsd-SDK-${pkgver}.zip)
+_mirror="http://www.eclipse.org/downloads/download.php?r=1&file="
+source=("$_mirror/modeling/emf/emf/downloads/drops/${pkgver}/R${_reldate}/emf-xsd-SDK-${pkgver}.zip")
 md5sums=('fddd1734dc63bfd755c203aea69b7dd1')
 
 package() {
