@@ -6,14 +6,15 @@
 pkgname=eclipse-gef
 pkgver=3.8.0
 _reldate=201206112118
-pkgrel=1
+pkgrel=2
 pkgdesc="GEF framework for the Eclipse platform"
 arch=('any')
 url="http://www.eclipse.org/gef/"
 license=('EPL')
 depends=('eclipse')
 changelog=ChangeLog
-source=(http://ftp-stud.fht-esslingen.de/pub/Mirrors/eclipse/tools/gef/downloads/drops/${pkgver}/R${_reldate}/GEF-ALL-${pkgver}.zip)
+_mirror="http://www.eclipse.org/downloads/download.php?r=1&file="
+source=("$_mirror/tools/gef/downloads/drops/${pkgver}/R${_reldate}/GEF-ALL-${pkgver}.zip")
 md5sums=('2f91eceeff62612b37bc91c57a41cc26')
 
 build() {
@@ -41,5 +42,3 @@ package() {
     install -Dm644 ${_plugin} ${_dest}/${_plugin}
   done
 }
-
-# vim:set ts=2 sw=2 et:
