@@ -2,8 +2,8 @@
 # Contributor: Jesus Jerez <jerezmoreno@gmail.com>
 
 pkgname=eclipse-jdt
-pkgver=3.7.2
-pkgdate=201202080800
+pkgver=4.2
+pkgdate=201206081400
 pkgrel=1
 pkgdesc="Java Development Tools - Separated from Eclipse SDK package. Use with eclipse-platform"
 url="http://www.eclipse.org/jdt/"
@@ -12,8 +12,8 @@ license=('EPL')
 depends=('eclipse-platform')
 makedepends=('unzip')
 options=(!strip)
-source=("http://www.eclipse.org/downloads/download.php?r=1&file=/eclipse/downloads/drops/R-${pkgver}-${pkgdate}/org.eclipse.jdt-${pkgver}.zip")
-md5sums=('19570283c4b92db40a6fb1730d717b38')
+source=("http://www.eclipse.org/downloads/download.php?r=1&file=/eclipse/downloads/drops4/R-${pkgver}-${pkgdate}/org.eclipse.jdt-${pkgver}.zip")
+md5sums=('f833399e35c67054d8bcc81497b0a374')
 
 build() {
 
