@@ -2,7 +2,7 @@
 # Maintainer: Ng Oon-Ee <  n g  o o n  e e AT g m a i l DOT c o m>
 
 pkgname=eclipse-linuxtools
-pkgver=0.10
+pkgver=1.1
 pkgrel=1
 pkgdesc="Eclipse Linux Tools Project"
 url="http://www.eclipse.org/linuxtools"
@@ -10,8 +10,8 @@ arch=('any')
 license=('EPL')
 depends=('eclipse-cdt')
 makedepends=('unzip')
-source=("http://download.eclipse.org/technology/linuxtools/linuxtools-${pkgver}-incubation.zip")
-md5sums=('63a94045ae53d442b903726f4b5e388f')
+source=("http://download.eclipse.org/linuxtools/linuxtools-${pkgver}.zip")
+md5sums=('b35911d180c50064d8774ed297cd59da')
 
 build() {
 
