@@ -2,8 +2,8 @@
 # Contributor: Jesus Jerez <jerezmoreno@gmail.com>
 
 pkgname=eclipse-pde
-pkgver=3.7.2
-pkgdate=201202080800
+pkgver=4.2
+pkgdate=201206081400
 pkgrel=1
 pkgdesc="Plug-in Development Environment - Separated from Eclipse SDK package. Use with eclipse-platform"
 url="http://www.eclipse.org/pde/"
@@ -12,8 +12,8 @@ license=('EPL')
 depends=('eclipse-platform')
 makedepends=('unzip')
 options=(!strip)
-source=("http://www.eclipse.org/downloads/download.php?r=1&file=/eclipse/downloads/drops/R-${pkgver}-${pkgdate}/org.eclipse.pde-${pkgver}.zip")
-md5sums=('4f942898d8ef2de3d354fe2ccefb64d2')
+source=("http://www.eclipse.org/downloads/download.php?r=1&file=/eclipse/downloads/drops4/R-${pkgver}-${pkgdate}/org.eclipse.pde-${pkgver}.zip")
+md5sums=('89a28b8cf70134aeb7a1ddd903dde6d7')
 
 build() {
 
