@@ -2,8 +2,8 @@
 # Contributor: Jonathan Wiersma <archaur at jonw dot org>
 
 pkgname=eclipse-rse
-pkgver=3.3.1
-_pkgdate=201109141310
+pkgver=3.4
+_pkgdate=201205300905
 pkgrel=1
 pkgdesc="Manage remote projects in Eclipse"
 arch=('i686' 'x86_64')
@@ -13,7 +13,7 @@ depends=("eclipse>=3.4")
 optdepends=('openssh')
 _mirror="http://www.eclipse.org/downloads/download.php?r=1&file="
 source=("$_mirror/tm/downloads/drops/R-$pkgver-$_pkgdate/RSE-runtime-$pkgver.zip")
-md5sums=('f67553307c44e249a49ee79183103e3a')
+md5sums=('dde0541d700742742e16cf200a64568e')
 
 package() {
 	cd $srcdir
