@@ -37,4 +37,4 @@ package() {
   install -m644 "${srcdir}"/{firefox-nightly.desktop,firefox-nightly-safe.desktop} "${pkgdir}/usr/share/applications/"
 }
 
-pkgrel=2
+pkgrel=3
