@@ -1,7 +1,7 @@
 # Maintainer: Michael Pusterhofer <pusterhofer[at]student.tugraz.at>
 pkgname=fullrecall
-pkgver=1.4.16.3
-pkgrel=1
+pkgver=1.4.19.6
+pkgrel=3
 epoch=
 pkgdesc="Software that can help you memorize the knowledge for lifelong periods with the minimum time investment"
 arch=(any)
@@ -19,14 +19,20 @@ backup=()
 options=()
 install=
 changelog=
-source=('http://fullrecall.com/d/fullrecall-linux.bin.bz2')
+source=('http://fullrecall.com/d/fullrecall-linux.bin.bz2'
+'fullrecall.desktop'
+'fullrecall.png')
 noextract=()
-md5sums=('176ff6d2b57f5a8f99eb20816215c71d')
+md5sums=('479d36f3b127948e3428024a086c0b88'
+         'e84dd7389610ffcfe1a1451d228f640a'
+         '59bc5f5c1df2f4ffa0fad05147b510ac')
 
 package() {
   cd $srcdir
   chmod +x fullrecall-linux.bin
   install -Dm755 fullrecall-linux.bin $pkgdir/usr/bin/fullrecall
+  install -Dm644 fullrecall.desktop $pkgdir/usr/share/applications/fullrecall.desktop
+  install -Dm644 fullrecall.png $pkgdir/usr/share/pixmaps/fullrecall.png
 }
 
 # vim:set ts=2 sw=2 et:
