@@ -1,0 +1,10 @@
+[Desktop Entry]
+Type=Application
+Version=1.4.19.6
+Name=FullRecall
+Comment=Software that can help you memorize the knowledge for lifelong periods with the minimum time investment
+Exec=/usr/bin/fullrecall
+Icon=fullrecall
+Terminal=false
+Categories=Education;
+
