@@ -2,7 +2,7 @@
 
 pkgname=hdf-eos2
 pkgver=2.18
-pkgrel=2
+pkgrel=3
 pkgdesc="The HDF-EOS2 is a software library designed built on HDF4 to support EOS-specific data structures, namely Grid, Point, and Swath. The new data structures are constructed from standard HDF data objects, using EOS conventions, through the use of a software library. A key feature of HDF-EOS files is that instrument-independent services, such as subsetting by geolocation, can be applied to the files across a wide variety of data products."
 url="http://www.hdfeos.org/software/library.php"
 license=('GPL')
@@ -14,6 +14,8 @@ md5sums=('755a75c7ce82f0df943c81bc94b32fe4')
 build() {
   cd $srcdir/hdfeos
   #sed -i '/LIBS="-ljpeg/d' configure
+  #export LDFLAGS="-lhdfeos -lGctp -lmfhdf -ldf -ljpeg -lz -lm -lsz"
+  export LDFLAGS="-lmfhdf -ldf -ljpeg -lz -lm -lsz"
 
   export CFLAGS="${CFLAGS/O2/O0}"
   export CXXFLAGS="${CFLAGS}"
@@ -34,11 +36,13 @@ build() {
   make DESTDIR=$startdir/pkg/ install
   install -d -m755 $pkgdir/usr/include/
   install -m644 include/*.h $pkgdir/usr/include/
-  rm $pkgdir/usr/lib/libGctp.a
-  rm $pkgdir/usr/lib/libGctp.la
-  rm $pkgdir/usr/include/ease.h
-  rm $pkgdir/usr/include/cfortHdf.h
+
   #install example
   install -d -m755 $pkgdir/usr/share/doc/hdf-eos2
   install -m644 samples/* $pkgdir/usr/share/doc/hdf-eos2/
+
+  rm $pkgdir/usr/include/cfortHdf.h
+  rm $pkgdir/usr/include/ease.h
+  rm $pkgdir/usr/lib/libGctp.a
+  rm $pkgdir/usr/lib/libGctp.la
 }
