@@ -2,7 +2,7 @@
 
 pkgname=hdf-eos5
 pkgver=1.14
-pkgrel=2
+pkgrel=3
 pkgdesc="The HDF-EOS5 is a software library designed built on HDF5 to support the same Grid/Point/Swath functionality in HDF-EOS 2 and to the extent possible it will be built with the same calling sequences as the original HDF-EOS 2 library."
 url="http://www.hdfeos.org/software/library.php"
 license=('GPL')
@@ -13,7 +13,8 @@ md5sums=('4a332f9bb4401103d484a1e9184e8972')
 
 build() {
   cd $srcdir/hdfeos5
-  export LDFLAGS="-lhe5_hdfeos -lGctp -lhdf5_hl -lhdf5 -ljpeg -lz -lsz -lm"
+  #export LDFLAGS="-lhe5_hdfeos -lGctp -lhdf5_hl -lhdf5 -ljpeg -lz -lsz -lm"
+  export LDFLAGS="-lhdf5_hl -lhdf5 -ljpeg -lz -lsz -lm"
 
   export CFLAGS="${CFLAGS/O2/O0}"
   export CXXFLAGS="${CFLAGS}"
