@@ -1,6 +1,6 @@
 # Maintainer: Paul N. Maxwell <msg.maxwel@gmail.com>
 pkgname=transmission-remote-gui-bin
-pkgver=3.2
+pkgver=4.0.3
 pkgrel=1
 pkgdesc="Cross platform remote GUI for the Transmission daemon"
 arch=('i686' 'x86_64')
@@ -20,12 +20,12 @@ source=("http://transmisson-remote-gui.googlecode.com/files/transgui-${pkgver}-$
         'transgui.launcher')
 noextract=()
 
-md5sums=('77c59716bff7d9c867bd6fe3357503b4'
+md5sums=('cb51625a2460d8d58715ee6465965b14'
          'cf55fd5a681d9b34a1f9c7d91b74d121'
          '972df0c768020926d2ce355fb0649e79')
 
 if [ $_carch = "i386" ]; then
-md5sums=('3635fadbfd3d34518fd5ad6758fd1e11'
+md5sums=('91bf0f4c9590084601315f715c66f8fc'
          'cf55fd5a681d9b34a1f9c7d91b74d121'
          '972df0c768020926d2ce355fb0649e79')
 fi
@@ -38,9 +38,10 @@ package() {
   cd "$srcdir"
   install -D -m 755 transgui $pkgdir/opt/TransGUI/transgui
   install -d -m 755 $pkgdir/opt/TransGUI/lang/
-  install -D -m 644 lang/transgui.{by,cn,cz,da,de,el,es,fr,hr,hu,it,ko,lv,nl,no,pl,pt_br,ro,ru,tw,ua} $pkgdir/opt/TransGUI/lang/
+  install -D -m 644 lang/transgui.{by,cn,cz,da,de,el,es,fi,fr,hr,hu,it,ko,lv,nl,no,pl,pt_br,ro,ru,se,tw,ua} $pkgdir/opt/TransGUI/lang/
   install -D -m 644 history.txt $pkgdir/opt/TransGUI/history.txt
   install -D -m 644 readme.txt $pkgdir/opt/TransGUI/readme.txt
+  install -D -m 644 LICENSE.txt $pkgdir/opt/TransGUI/LICENSE.txt
   install -D -m 644 transgui.png $pkgdir/opt/TransGUI/transgui.png
   install -d -m 755 $pkgdir/usr/share/pixmaps/
   ln -s /opt/TransGUI/transgui.png $pkgdir/usr/share/pixmaps/transgui.png
