@@ -1,3 +1,6 @@
+2012-07-28  Stéphane Marguet (Stemp) <smarguet@gmail.com>
+	* Update source URL (Thanks to Shanto)
+	  
 2012-06-29  Stéphane Marguet (Stemp) <smarguet@gmail.com>
 	* New upstream version
 	* modernize the rather outdated release engineering infrastructure of
